--- a/src/detail.html
+++ b/src/detail.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Detailed Data - 766 Scouting</title>
+        <title>Detailed Data - bearTracks</title>
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
@@ -18,7 +18,7 @@
         <script>themeHandle()</script>
         <div class="container" id="results" style="display: flex;">
             <div class="dummy">
-                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
                 <h3 style="color: var(--cancelColor); display: none;" id="errorTxt"></h3>
                 <h4>Match Data</h4><br>
                 <fieldset>
