--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>CHARGED UP Scouting - 766 Scouting</title>
+        <title>CHARGED UP Scouting - bearTracks</title>
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
@@ -22,7 +22,7 @@
                 <span class="closeAlert" onclick="this.parentElement.classList.add('fadeout');">&times;</span> You are offline
             </div>
             <div>
-                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
+                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1><br>
                 <div style="display: flex; flex-direction: column;">
                     <a href="main" class="gameflair1" style="order: 1; margin-bottom: 5%;">match scouting<br></a>
                     <a href="matches" class="gameflair1" style="order: 3; margin-bottom: 5%;">match list<br></a>
