--- a/src/points.html
+++ b/src/points.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Points - 766 Scouting</title>
+        <title>Points - bearTracks</title>
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
@@ -18,7 +18,7 @@
         <script>themeHandle()</script>
         <div class="container">
             <div>
-                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
                 <div style="display: flex; flex-direction: column;">
                     <a href="spin" class="gameflair1 bigLink">spin thing</a><br>
                     <a href="blackjack" class="gameflair1 bigLink">blackjack</a><br>
