--- a/src/settings.html
+++ b/src/settings.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Settings - 766 Scouting</title>
+        <title>Settings - bearTracks</title>
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
@@ -17,7 +17,7 @@
         <script>themeHandle()</script>
         <div class="container">
             <div class="dummy">
-                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
                 <h2>Settings</h2><br>
                 <button style="background-color: transparent; border: 1px solid var(--textColor); color: var(--textColor)gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="changeTheme()"><p>Switch Theme</p></button><br><br>
                 <button style="background-color: transparent; border: 1px solid var(--cancelColor); color: var(--cancelColor); border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='logout'"><p>Log Out</p></button>
