--- a/src/browse.html
+++ b/src/browse.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Browse Data - 766 Scouting</title>
+        <title>Browse Data - bearTracks</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
         <meta name="mobile-web-app-capable" content="yes">
@@ -18,7 +18,7 @@
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <form>
-                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Match Data</h4>
                 <h3 style="color: var(--cancelColor); display: none;" id="errorTxt"></h3>
                 <fieldset id="searchFset">
@@ -45,7 +45,7 @@
         </div>
         <div class="container" id="results" style="display: none;">
             <div class="dummy">
-                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Match Data</h4><br>
                 <h3 id="teamAtEvent"></h3>
                 <div style="overflow-x: auto; width: 95vw;">
