--- a/src/login.html
+++ b/src/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Login - 766 Scouting</title>
+        <title>Login - bearTracks</title>
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
@@ -18,7 +18,7 @@
         <script>themeHandle()</script>
         <div class="container">
             <div class="dummy">
-                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
                 <form action="/loginForm" target="_self" method="POST">
                     <h2 style="margin-top: 0; margin-bottom: 2rem">Log In</h2>
                     <h4 style="color: var(--cancelColor); display: none;" id="error"></h4>
