--- a/src/main.html
+++ b/src/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Match Scouting - 766 Scouting</title>
+        <title>Match Scouting - bearTracks</title>
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
@@ -18,7 +18,7 @@
         <script>themeHandle()</script>
         <form id="mainFormHTML">
             <input type="text" value="main" name="formType" hidden>
-            <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
+            <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1><br>
             <h2 class="gameflair1">Pre-Match</h2>
             <fieldset>
                 <label>Event Code<span id="badEvent" style="color: red; display: none;"></span><br></label>
