--- a/src/manage.html
+++ b/src/manage.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Manage Data - 766 Scouting</title>
+        <title>Manage Data - bearTracks</title>
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
@@ -18,7 +18,7 @@
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <form>
-                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Manage Data</h4><br>
                 <fieldset>
                     <button type="button" class="uiButton actionButton" onclick="getData()" id="viewData">View Data</button><br>
@@ -31,7 +31,7 @@
         </div>
         <div class="container" id="results" style="display: none;">
             <div class="dummy">
-                <h1 class="w3">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Manage Data</h4><br>
                 <fieldset id="resultsInsert"><button type="button" class="uiButton returnButton" onclick="newSearch()">New Search</button><br><button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button></fieldset>
                 <br><br>
