--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -18,7 +18,7 @@
         <script>themeHandle()</script>
         <div class="container" id="start" style="display: flex;">
             <div>
-                <h1 id="title" style="font-family: 'raleway-300'">766 Casino<br><span class="gametitle">Single-Player Blackjack</span></h1><br>
+                <h1 id="title" style="font-family: 'raleway-300'">bearTracks<br><span class="gametitle">Single-Player Blackjack</span></h1><br>
                 <p>Dealer hits until their total is 17 or more.<br>Bet is 10 points.</p>
                 <select id="deck">
                     <option value="assets/stdcards/" selected>Default Cards</option>
