--- a/src/browse.html
+++ b/src/browse.html
@@ -18,8 +18,7 @@
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <form>
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
-                <h4>Match Data</h4>
+                <h1 class="w3">bearTracks<br><span class="gametitle">browse data</span></h1>
                 <h3 style="color: var(--cancelColor); display: none;" id="errorTxt"></h3>
                 <fieldset id="searchFset">
                     <select id="type">
@@ -40,13 +39,13 @@
                     <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
                 </fieldset>
                 <small style="text-align: center;"><a href="teams" style="all: unset; color: var(--gameFlairColor);">teams by performance score</a></small><br>
+                <small style="text-align: center;"><a href="charts" style="all: unset; color: var(--gameFlairColor);">team charts</a></small><br>
             </form>
             <br><br>
         </div>
         <div class="container" id="results" style="display: none;">
             <div class="dummy">
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
-                <h4>Match Data</h4><br>
+                <h1 class="w3">bearTracks<br><span class="gametitle">browse data</span></h1>
                 <h3 id="teamAtEvent"></h3>
                 <div style="overflow-x: auto; width: 95vw;">
                     <table>
