--- a/src/detail.html
+++ b/src/detail.html
@@ -18,9 +18,8 @@
         <script>themeHandle()</script>
         <div class="container" id="results" style="display: flex;">
             <div class="dummy">
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">match data</span></h1>
                 <h3 style="color: var(--cancelColor); display: none;" id="errorTxt"></h3>
-                <h4>Match Data</h4><br>
                 <fieldset>
                     <fieldset>
                         <h3>Team Number: <span id="resultTeamNum"></span></h3>
