--- a/src/main.html
+++ b/src/main.html
@@ -14,11 +14,11 @@
         <link rel="stylesheet" href="css/grid.min.css" type="text/css">
         <script src="js/form/form.min.js"></script>
     </head>
-    <body class="dark-mode" onload="checkLogin()" style="width: 99vw;">
+    <body class="dark-mode" onload="checkLogin()" style="width: 100vw;">
         <script>themeHandle()</script>
         <form id="mainFormHTML">
             <input type="text" value="main" name="formType" hidden>
-            <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1><br>
+            <h1 class="w3">bearTracks<br><span class="gametitle">match scouting</span></h1><br>
             <h2 class="gameflair1">Pre-Match</h2>
             <fieldset>
                 <label>Event Code<span id="badEvent" style="color: red; display: none;"></span><br></label>
