--- a/src/manageTeam.html
+++ b/src/manageTeam.html
@@ -19,8 +19,7 @@
         <script>themeHandle()</script>
         <div class="container" style="display: flex;">
             <div class="dummy">
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
-                <h4>Manage Team</h4>
+                <h1 class="w3">bearTracks<br><span class="gametitle">manage team</span></h1>
                 <div style="overflow-x: auto; width: 95vw;">
                     <table>
                         <tr id="tableHeader"><th>Scout</th><th></th></tr>
