--- a/src/manageTeams.html
+++ b/src/manageTeams.html
@@ -19,9 +19,8 @@
         <script>themeHandle()</script>
         <div class="container">
             <div class="dummy">
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">manage teams</span></h1>
                 <div style="overflow-x: auto; width: 95vw;" id="mainsect">
-                    <h2>Manage Teams</h2>
                     <table>
                         <tr id="teamsTableHead"><th>Team</th><th>Code</th></tr>
                     </table><br><br>
