--- a/src/pointRecords.html
+++ b/src/pointRecords.html
@@ -19,10 +19,9 @@
         <script>themeHandle()</script>
         <div class="container" id="results" style="display: flex;">
             <div class="dummy">
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">point records</span></h1>
                 <fieldset>
                     <fieldset>
-                        <h3 id="eventCodeDisplay">Point Transactions</h3>
                         <table>
                             <tr id="preInsert"><th>Description</th><th>Amount</th><th>Timestamp</th></tr>
                         </table>
