--- a/src/points.html
+++ b/src/points.html
@@ -18,7 +18,7 @@
         <script>themeHandle()</script>
         <div class="container">
             <div>
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">casino</span></h1>
                 <div style="display: flex; flex-direction: column;">
                     <a href="spin" class="gameflair1 bigLink">spin thing</a><br>
                     <a href="blackjack" class="gameflair1 bigLink">blackjack</a><br>
