--- a/src/settings.html
+++ b/src/settings.html
@@ -16,9 +16,8 @@
     <body class="dark-mode centerText">
         <script>themeHandle()</script>
         <div class="container">
-            <div class="dummy">
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
-                <h2>Settings</h2><br>
+            <div class="dummy" style="min-width: 250px;">
+                <h1 class="w3">bearTracks<br><span class="gametitle">settings</span></h1>
                 <button style="background-color: transparent; border: 1px solid var(--textColor); color: var(--textColor)gray; border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="changeTheme()"><p>Switch Theme</p></button><br><br>
                 <button style="background-color: transparent; border: 1px solid var(--cancelColor); color: var(--cancelColor); border-radius: 10px; padding: 1px; font-weight: 500; width: 75%;" onclick="window.location.href='logout'"><p>Log Out</p></button>
                 <button style="background-color: transparent; border: none; color: var(--cancelColor); padding: 0px; width: 75%;" onclick="window.location.href='clearCookies'"><p>Reset Cookies</p></button><br><br><br>
