--- a/src/spin.html
+++ b/src/spin.html
@@ -19,7 +19,7 @@
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;"> 
             <div>
-                <h1 id="title" style="font-family: 'raleway-300'">bearTracks Casino<br><span class="gametitle">spin wheel thing</span></h1>
+                <h1 id="title" style="font-family: 'raleway-300'">bearTracks<br><span class="gametitle">spin wheel thing</span></h1>
                 <br><h3 style="line-height:0%">⇓</h3>
                 <img src="assets/wheel.png" id="wheel" width="250vw" height="250vw"><br>
                 <h3 id="result" style="display: none;"></h3>
