--- a/src/charts.html
+++ b/src/charts.html
@@ -18,8 +18,7 @@
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <form>
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
-                <h4>Team Graphs</h4>
+                <h1 class="w3">bearTracks<br><span class="gametitle">charts</span></h1>
                 <h3 style="color: var(--cancelColor); display: none;" id="error"></h3>
                 <fieldset id="searchFset">
                     <label>Team</label><br>
