--- a/src/manage.html
+++ b/src/manage.html
@@ -18,8 +18,7 @@
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <form>
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
-                <h4>Manage Data</h4><br>
+                <h1 class="w3">bearTracks<br><span class="gametitle">manage data</span></h1>
                 <fieldset>
                     <button type="button" class="uiButton actionButton" onclick="getData()" id="viewData">View Data</button><br>
                     <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
