--- a/src/manageScouts.html
+++ b/src/manageScouts.html
@@ -19,8 +19,7 @@
         <script>themeHandle()</script>
         <div class="container" style="display: flex;">
             <div class="dummy">
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
-                <h4>Manage Scouts</h4>
+                <h1 class="w3">bearTracks<br><span class="gametitle">manage scouts</span></h1>
                 <div style="overflow-x: auto; width: 95vw;">
                     <table>
                         <tr id="tableHeader"><th>Scout</th><th>Points</th><th></th></tr>
