--- a/src/scouts.html
+++ b/src/scouts.html
@@ -19,7 +19,7 @@
         <script>themeHandle()</script>
         <div class="container" id="results" style="display: flex;">
             <div class="dummy">
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">scouts</span></h1>
                 <fieldset>
                     <fieldset>
                         <h3 id="eventCodeDisplay"></h3>
