--- a/src/teams.html
+++ b/src/teams.html
@@ -19,8 +19,7 @@
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <form>
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
-                <h3>Team Data</h3>
+                <h1 class="w3">bearTracks<br><span class="gametitle">performance ranks</span></h1>
                 <fieldset>
                     <label>Event Code: </label><br>
                     <select name="event" id="eventCode">
