--- a/src/matches.html
+++ b/src/matches.html
@@ -18,7 +18,7 @@
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
             <div class="maincontent">
-                <h1 style="font-family: 'raleway-300'">bearTracks<br><span class="gametitle">Matches</span></h1><br><br>
+                <h1 class="w3">bearTracks<br><span class="gametitle">Matches</span></h1><br><br>
                 <fieldset>
                     <label>Event Code: </label><br>
                     <select name="event" id="eventCode">
@@ -35,7 +35,7 @@
         </div>
         <div class="container" id="results" style="display: none;">
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'" id="matchHeader">bearTracks<br><span class="gametitle">Matches</span></h1><br><br>
+                <h1 class="w3" id="matchHeader">bearTracks<br><span class="gametitle">Matches</span></h1><br><br>
                 <button class="uiButton actionButton" onclick="window.location.href='/'">Back</button><br>
             </div>
         </div>
