--- a/src/manage.html
+++ b/src/manage.html
@@ -36,6 +36,7 @@
                 <br><br>
             </div>
         </div>
-        <script src="js/manage/manage.min.js" type="text/javascript"></script>
+        <script src="js/_modules/get/get.js" type="module"></script>
+        <script src="js/manage/manage.min.js" type="module"></script>
     </body>
 </html>
