change ts build flow

--- a/src/create.html
+++ b/src/create.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <script src="js/form/form.min.js"></script>
     </head>
-    <body class="dark-mode centerText" onload="displayErrors()">
+    <body class="dark-mode centerText" onload="displayCreateErrors()">
         <script>themeHandle()</script>
         <div class="container">
             <div class="dummy">
