--- a/src/login.html
+++ b/src/login.html
@@ -14,7 +14,7 @@
         <link rel="apple-touch-startup-image" href="public/launch.png">
         <script src="js/form/form.min.js"></script>
     </head>
-    <body class="dark-mode centerText" onload="displayErrors()">
+    <body class="dark-mode centerText" onload="displayLoginErrors()">
         <script>themeHandle()</script>
         <div class="container">
             <div class="dummy">
