--- a/src/manageScouts.html
+++ b/src/manageScouts.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/table.min.css" type="text/css">
         <script src="js/form/form.min.js"></script>
     </head>
-    <body class="dark-mode" onload="getData()">
+    <body class="dark-mode" onload="getScoutsDataMgmt()">
         <script>themeHandle()</script>
         <div class="container" style="display: flex;">
             <div class="dummy">
@@ -28,6 +28,7 @@
                 <button type="button" class="uiButton returnButton" onclick="window.location.href='/manage'">Back</button>
             </div>
         </div>
+        <script src="js/_modules/get/get.js" type="module"></script>
         <script src="js/manageScouts/manageScouts.min.js" type="text/javascript"></script>
     </body>
 </html>
