--- a/src/scouts.html
+++ b/src/scouts.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/table.min.css" type="text/css">
         <script src="js/form/form.min.js"></script>
     </head>
-    <body class="dark-mode" onload="getTeamRanks()">
+    <body class="dark-mode" onload="getScoutRanks()">
         <script>themeHandle()</script>
         <div class="container" id="results" style="display: flex;">
             <div class="dummy">
