write more modules

--- a/src/manageScouts.html
+++ b/src/manageScouts.html
@@ -28,7 +28,6 @@
                 <button type="button" class="uiButton returnButton" onclick="window.location.href='/manage'">Back</button>
             </div>
         </div>
-        <script src="js/_modules/get/get.js" type="module"></script>
-        <script src="js/manageScouts/manageScouts.min.js" type="text/javascript"></script>
+        <script type="module" src="js/manageScouts/manageScouts.min.js"></script>
     </body>
 </html>
