--- a/src/manageTeams.html
+++ b/src/manageTeams.html
@@ -35,6 +35,6 @@
                 <button type="button" class="uiButton returnButton" onclick="window.location.href='/manage'">back</button>
             </div>
         </div>
-        <script src="js/manageTeams/manageTeams.min.js" type="text/javascript"></script>
+        <script type="module" src="js/manageTeams/manageTeams.min.js"></script>
     </body>
 </html>
