--- a/src/matches.html
+++ b/src/matches.html
@@ -39,6 +39,6 @@
                 <button class="uiButton actionButton" onclick="window.location.href='/'">Back</button><br>
             </div>
         </div>
-        <script src="js/matches/matches.min.js" type="text/javascript"></script>
+        <script type="module" src="js/matches/matches.min.js"></script>
     </body>
 </html>
