--- a/src/browse.html
+++ b/src/browse.html
@@ -81,6 +81,6 @@
                 <br><br>
             </div>
         </div>
-        <script src="js/browse/browse.min.js" type="text/javascript"></script>
+        <script type="module" src="js/browse/browse.min.js"></script>
     </body>
 </html>
