--- a/src/create.html
+++ b/src/create.html
@@ -30,6 +30,6 @@
                 </form>
             </div>
         </div>
-        <script src="js/create/create.min.js" type="text/javascript"></script>
+        <script type="module" src="js/create/create.min.js"></script>
     </body>
 </html>
