--- a/src/detail.html
+++ b/src/detail.html
@@ -30,6 +30,6 @@
                 </fieldset>
             </div>
         </div>
-        <script src="js/detail/detail.min.js" type="text/javascript"></script>
+        <script type="module" src="js/detail/detail.min.js"></script>
     </body>
 </html>
