--- a/src/login.html
+++ b/src/login.html
@@ -30,6 +30,6 @@
                 <small style="text-align: center;"><a href="create" class="actLink">create account</a></small><br>
             </div>
         </div>
-        <script src="js/login/login.min.js" type="text/javascript"></script>
+        <script type="module" src="js/login/login.min.js"></script>
     </body>
 </html>
