--- a/src/main.html
+++ b/src/main.html
@@ -158,6 +158,6 @@
             <br>
             <button type="button" class="uiButton actionButton" onclick="uploadForm()" id="reSubmitButton" style="display: none;">retry</button><br>
         </div>
-        <script src="js/main_form/main_form.min.js" type="text/javascript"></script>
+        <script type="module" src="js/main_form/main_form.min.js"></script>
     </body>
 </html>
