--- a/src/manageTeam.html
+++ b/src/manageTeam.html
@@ -28,6 +28,6 @@
                 <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
             </div>
         </div>
-        <script src="js/manageTeam/manageTeam.min.js" type="text/javascript"></script>
+        <script type="module" src="js/manageTeam/manageTeam.min.js"></script>
     </body>
 </html>
