--- a/src/pointRecords.html
+++ b/src/pointRecords.html
@@ -31,6 +31,6 @@
                 </fieldset>
             </div>
         </div>
-        <script src="js/pointRecords/pointRecords.min.js" type="text/javascript"></script>
+        <script type="module" src="js/pointRecords/pointRecords.min.js"></script>
     </body>
 </html>
