--- a/src/spin.html
+++ b/src/spin.html
@@ -26,6 +26,6 @@
                 <button id="playBtn" type="button" class="uiButton returnButton" onclick="spinWheel()">Spin</button><br><button id="backBtn" type="button" style="color: var(--gameFlairColor); background-color: #121212; border-radius: 0.5rem; border-style: solid; border-color: #121212; border-width: 0.875rem; margin-top: 1rem;" onclick="window.location.href='/points'">Back</button>
             </div>
         </div>
-        <script src="js/casino_spin/casino_spin.min.js" type="text/javascript"></script>
+        <script type="module" src="js/casino_spin/casino_spin.min.js"></script>
     </body>
 </html>
