--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -3,13 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Blackjack - bearTracks</title>
-        <meta name="robots" content="noindex, nofollow">
+        <meta name="robots" content="nositelinkssearchbox, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="apple-mobile-web-app-title" content="Scouting">
-        <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
         <script src="js/form/form.min.js"></script>
@@ -23,9 +19,7 @@
                 <select id="deck">
                     <option value="assets/stdcards/" selected>Default Cards</option>
                     <option value="assets/progcards/">Programming Cards</option>
-                    <optgroup label="coming 'soon'">
-                        <option value="assets/gruvcards/" disabled>Gruvbox Cards</option>
-                    </optgroup>
+                    <optgroup label="coming 'soon'"><option value="assets/gruvcards/" disabled>Gruvbox Cards</option></optgroup>
                 </select><br><br>
                 <button class="uiButton actionButton" onclick="startBlackjack()">Play</button><br><button  class="uiButton returnButton" onclick="window.location.href='/points'">Back</button>
             </div>
