--- a/src/manageScouts.html
+++ b/src/manageScouts.html
@@ -3,13 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Manage Scouts - bearTracks</title>
-        <meta name="robots" content="noindex, nofollow">
+        <meta name="robots" content="nositelinkssearchbox, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
-        <meta name="mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="apple-mobile-web-app-title" content="Scouting">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
         <link rel="stylesheet" href="css/table.min.css" type="text/css">
