use usernames as everything

--- a/src/login.html
+++ b/src/login.html
@@ -18,7 +18,7 @@
                 <form action="/loginForm" target="_self" method="POST">
                     <h2 style="margin-top: 0; margin-bottom: 2rem">Log In</h2>
                     <h4 style="color: var(--cancelColor); display: none;" id="error"></h4>
-                    <label for="email">Email</label><br><input type="email" name="email" autocomplete="email" class="credInput" required><br><br>
+                    <label for="email">Username</label><br><input type="text" name="username" autocomplete="username" class="credInput" required><br><br>
                     <label for="password">Password</label><br><input type="password" name="password" autocomplete="password" class="credInput" required><br><br><br>
                     <button type="submit" class="uiButton actionButton">Log In</button>
                 </form>
