--- a/src/passkey.html
+++ b/src/passkey.html
@@ -23,6 +23,6 @@
             </div>
         </div>
         <script src="https://unpkg.com/@simplewebauthn/browser@8.3.4/dist/bundle/index.umd.min.js" integrity="sha384-7FvcOpf85HsGS89sLrvOOHZYqgaEqbfUi87HhpbqbndTSFw+XpzbDMK5ZcxD28fe" crossorigin="anonymous"></script>
-        <script type="module" src="js/createPasskey/createPasskey.min.js"></script>
+        <script src="js/createPasskey/createPasskey.min.js"></script>
     </body>
 </html>
