--- a/src/login.html
+++ b/src/login.html
@@ -11,7 +11,7 @@
         <link rel="apple-touch-startup-image" href="public/launch.png">
         <script src="js/form/form.min.js"></script>
     </head>
-    <body class="dark-mode centerText">
+    <body class="dark-mode centerText" onload="displayErrors()">
         <script>themeHandle()</script>
         <div class="container">
             <div class="dummy">
