--- a/src/login.html
+++ b/src/login.html
@@ -18,7 +18,7 @@
                 <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
                 <div class="login">
                     <div id="currentUsername"><p class="unField">welcome back to hell</p><h2 class="unValue">please log in</h2></div>
-                    <h3 id="errorElement" style="color: var(--cancelColor);"></h3>
+                    <h3 id="error" style="color: var(--cancelColor);"></h3>
                     <input type="text" id="inputInfo" autocomplete="username" placeholder="username" class="ci">
                     <div class="buttonCont">
                         <button id="pw" class="uiButton actionButton nextButton submitButton" style="display: none;"></button>
